paginate today events
